fix spacing between hx tag and succeeding body text p

--- a/site/css/styles.css
+++ b/site/css/styles.css
@@ -88,8 +88,7 @@ h3 {
     font-size: var(--s2);
 }
 
-hgroup > * + *,
-:is(h1, h2, h3, h4, h5, h6) + p
+hgroup > * + *
 {
     margin-top: 2px;
 }
